# litter

./: dist-workspace.toml
.github/workflows/: mobile-release.yml
apps/android/app/src/main/java/com/litter/android/state/: AppLifecycleController.kt  AppModel.kt
apps/android/app/src/main/java/com/litter/android/ui/: ExperimentalFeatures.kt
apps/android/app/src/main/java/com/litter/android/ui/discovery/: AlleycatAddServerSheet.kt  DiscoveryScreen.kt
apps/android/app/src/main/java/com/litter/android/ui/home/: ServerPillRow.kt
apps/ios/: project.yml
apps/ios/Litter.xcodeproj/: project.pbxproj
apps/ios/Litter.xcodeproj/xcshareddata/xcschemes/: Litter.xcscheme  LitterMac.xcscheme  LitterWatch.xcscheme
apps/ios/Sources/Litter/: LitterApp.swift
apps/ios/Sources/Litter/Models/: AppLifecycleController.swift  AppModel.swift  CatalystRuntimeStubs.swift  ExperimentalFeatures.swift  WatchCompanionBridge.swift  WatchProjection.swift
apps/ios/Sources/Litter/Views/: AlleycatAddServerSheet.swift  DiscoveryView.swift  HomeDashboardView.swift  HomeSessionsScrollView.swift  MessageBubbleView.swift  SSHAgentPickerSheet.swift  SSHLoginSheet.swift  ServerPill.swift
apps/ios/Sources/LitterWatch/: LitterWatchApp.swift
apps/ios/Sources/LitterWatch/Models/: WatchModels.swift
apps/ios/Sources/LitterWatch/Views/: DiffsScreen.swift  HomeScreen.swift  TaskDetailScreen.swift
apps/ios/Tests/LitterTests/: AppSnapshotRuntimeTests.swift  HomeDashboardSupportTests.swift  MessageContentBridgeTests.swift  PerServerComplicationTests.swift  RunningTurnSnapshotTests.swift  StreamingAssistantRenderCacheTests.swift  WatchCompanionBridgeTests.swift  WatchProjectionTests.swift
apps/ios/Tests/LitterUITests/: LitterUITests.swift
apps/ios/scripts/: testflight-upload.sh
docs/: omp-remote-integration.md
docs/releases/: testflight-whats-new.md
services/kittylitter/: Cargo.toml  README.md
shared/rust-bridge/codex-mobile-client/src/store/: reconcile.rs
tools/scripts/: update-alleycat-main.sh
