[workspace]

[package]
name = "kittylitter"
version = "0.3.4"
edition = "2024"
license = "GPL-3.0-only"
authors = ["The Alleycat Authors"]
repository = "https://github.com/dnakov/litter"
homepage = "https://github.com/dnakov/litter"
description = "Iroh-backed daemon that multiplexes local coding agents (Codex, Pi, OMP, OpenCode, Claude) for paired clients."
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "DA2F3E1D-ED35-4E0F-A090-DBAF066F1634"
path-guid = "45FCD157-114F-40BA-8F2D-21BA43E7F15F"
license = false
eula = false

[[bin]]
name = "kittylitter"
path = "src/main.rs"

[dependencies]
# Tracks the OMP-enabled Alleycat fork while the upstream integration is
# reviewed. `./tools/scripts/update-alleycat-main.sh --kittylitter` refreshes
# this branch's lockfile to its current commit.
alleycat = { git = "https://github.com/johannhipp/alleycat.git", branch = "omp-support" }
anyhow = "1"

# cargo-dist builds with `cargo build --profile dist`. Mirrors the
# upstream alleycat workspace's profile so binaries are LTO-thinned in
# release artifacts.
[profile.dist]
inherits = "release"
lto = "thin"
